--- a/ionic-plain/index.html
+++ b/ionic-plain/index.html
@@ -27,16 +27,17 @@
                             <ion-card-content>
                                 <ion-item>
                                     <ion-label position="floating">Expense Reason</ion-label>
-                                    <ion-input type="text"></ion-input>
+                                    <ion-input id="input-reason" type="text"></ion-input>
                                 </ion-item>
                                 <ion-item>
                                     <ion-label position="floating">Expense Amount</ion-label>
-                                    <ion-input type="number"></ion-input>
+                                    <ion-input type="number" id="input-amount"></ion-input>
                                 </ion-item>
+
                                 <div class="ion-margin-vertical ion-text-right">
-                                    <ion-button fill="outline" color="danger"><ion-icon slot="start" name="close"></ion-icon>
+                                    <ion-button id="btn-clear" fill="outline" color="danger"><ion-icon slot="start" name="close"></ion-icon>
                                         Clear</ion-button>
-                                    <ion-button><ion-icon slot="start" name="add-outline"></ion-icon>
+                                    <ion-button id="btn-confirm"><ion-icon slot="start" name="add-outline"></ion-icon>
                                         Add Expense</ion-button>
                                 </div>
                             </ion-card-content>
@@ -61,5 +62,6 @@
             </ion-card>-->
         </ion-content>
     </ion-app>
+    <script src="app.js"></script>
 </body>
 </html>
