--- a/ionic-plain/index.html
+++ b/ionic-plain/index.html
@@ -44,6 +44,16 @@
                         </ion-card>
                     </ion-col>
                 </ion-row>
+                <ion-row>
+                    <ion-col class="ion-padding" size-md="6" offset-md="3">
+                        <p>Total Expense : <span id="total-expense"></span></p>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col size-md="6" offset-md="3">
+                        <ion-list id="expenses-list"></ion-list>
+                    </ion-col>
+                </ion-row>
             </ion-grid>
             <!--<ion-card>
                 <ion-card-header>
