Fixing to display ion-alert-cotroller

--- a/ionic-plain/index.html
+++ b/ionic-plain/index.html
@@ -71,6 +71,7 @@
                 </ion-card-content>
             </ion-card>-->
         </ion-content>
+        <ion-alert></ion-alert>
     </ion-app>
     <script src="app.js"></script>
 </body>
